--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
+    "react-router-v4": "npm:react-router-dom@^4.2.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
